# mipt_tp_2022

task1/: run.sh
task2/: CMakeLists.txt
task2/A/: preparing.py
task2/B/: CMakeLists.txt  lib.cpp  lib.h
task2/C/: main.cpp  main.h  main_test.cpp  test.cpp
task3/: CMakeLists.txt
task3/src/: CMakeLists.txt
task4/: build.gradle
task4/gradle/wrapper/: gradle-wrapper.properties
task4/src/main/java/ru/tp/: Main.java
task4/src/main/java/ru/tp/add_01/: Add.java  Leap.java
task4/src/main/java/ru/tp/tree_02/: FileNode.java  Tree.java
task4/src/main/java/ru/tp/weather_03/: Weather.java
task4/src/test/java/ru/tp/add_01/: AddTest.java  LeapTest.java
task4/src/test/java/ru/tp/tree_02/: TreeTest.java
task4/src/test/java/ru/tp/weather_03/: WeatherTest.java
